--- a/Rodgort/ClientApp/src/app/requests/requests.component.scss
+++ b/Rodgort/ClientApp/src/app/requests/requests.component.scss
@@ -88,7 +88,3 @@
 .closed-label {
     color: red;
 }
-
-.loading-container {
-    text-align: center;
-}
