--- a/Rodgort/ClientApp/src/styles.scss
+++ b/Rodgort/ClientApp/src/styles.scss
@@ -2,3 +2,7 @@ body {
     position: relative;
     min-height: 100vh;
 }
+
+.loading-container {
+    text-align: center;
+}
